# cargo-frclib

./: Cargo.toml  out.json
deploy_descriptors/: deploy-descriptor.schema.json  rio.json
src/: errors.rs  main.rs
src/actions/: deploy_descriptor.rs  git_commit.rs  mod.rs  ssh_client.rs
src/cmds/: checker.rs  mod.rs  tester.rs
src/configs/: global_config.rs  mod.rs  project_config.rs
